[gd_scene load_steps=5 format=3 uid="uid://c0s8o3lv2rmkk"]

[ext_resource type="Script" uid="uid://bdduojukmpbr1" path="res://Scripts/Location Scripts/DayBedroom.gd" id="1_wov0c"]
[ext_resource type="Texture2D" uid="uid://pq0rl34y4fqs" path="res://Assets/Background/BedRoom-Sheet.png" id="2_wov0c"]
[ext_resource type="PackedScene" uid="uid://cxboijjkk1bb2" path="res://Scenes/Location Scenes/CommonBedroomAssets.tscn" id="4_7dcb4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8saeu"]
radius = 17.8564
height = 73.5692

[node name="DayBedroom" type="Control"]
layout_mode = 3
anchor_right = 0.731
anchor_bottom = 0.789
offset_top = -8.0
offset_right = 0.599976
offset_bottom = -8.30005
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wov0c")

[node name="TheRoom" type="Node2D" parent="."]

[node name="RoomSprite" type="Sprite2D" parent="TheRoom"]
texture_filter = 1
position = Vector2(512, 264)
scale = Vector2(4, 4)
texture = ExtResource("2_wov0c")
hframes = 6
frame = 2

[node name="BedMM" type="Area2D" parent="TheRoom"]
position = Vector2(312, 472)

[node name="Footofbed" type="CollisionShape2D" parent="TheRoom/BedMM"]
rotation = 1.0472
shape = SubResource("CapsuleShape2D_8saeu")
metadata/_edit_lock_ = true

[node name="CommonBedroomAssets" parent="TheRoom" instance=ExtResource("4_7dcb4")]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 216.0
offset_right = 235.0
offset_bottom = 265.0
text = "Press [spacebar] at foot 
of bed to fall asleep."

[connection signal="body_entered" from="TheRoom/BedMM" to="." method="_on_bed_mm_body_entered"]
[connection signal="body_exited" from="TheRoom/BedMM" to="." method="_on_bed_mm_body_exited"]
